--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -28,7 +28,7 @@
 
   --transition: all 400ms ease;
 
-  --container-width-lg: 75%;
+  --container-width-lg: 100%;
   --container-width-md: 86%;
   --container-width-sm: 90%;
 }
@@ -130,11 +130,6 @@ section>h2 {
 
 .home {
   height: 100vh;
-}
-
-.home-description {
-  width: 100%;
-  height: 25%;
 }
 
 .home-nav {
@@ -247,6 +242,8 @@ img {
   align-items: center;
   background-color: var(--color-bg);
   padding: 1rem;
+  /* position: fixed;
+  width: 100%; */
 }
 
 /*.nav-home-links {
@@ -297,14 +294,21 @@ img {
 .patmos4-img {
   background-image: url(./assets/patmos4.jpg);
   width: 100%;
-  height: 25%;
+  height: 45%;
   background-size: cover;
+}
+
+.home-description {
+  width: 100%;
+  height: 20rem;
+  background-color: white;
+  color: black;
 }
 
 .patmos5-img {
   background-image: url(./assets/patmos5.jpg);
   width: 100%;
-  height: 25%;
+  height: 50%;
   background-size: cover;
 }
 
