--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -346,6 +346,15 @@ a.Progress{
   border: 2px solid darkorange;
 }
 
+.css-10o2lyd-MuiStack-root>:not(style):not(style){
+  background-color: white;
+  border-radius: 0.5rem;
+}
+
+.css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root{
+  background-color: white;
+  border-radius: 0.5rem;
+}
 
 
 
