--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -280,6 +280,32 @@ img {
   background-size: cover;
 }
 
+.gift-img {
+  background-image: url(./assets/gift.jpeg);
+  width: 100%;
+  height: 20rem;
+  background-size: cover;
+}
+
+.text-shadow {
+  text-shadow: rgb(18, 18, 17) 1.5px 0 10px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 1.2rem;
+}
+
+.gift-title{
+  text-shadow: rgb(18, 18, 17) 1.5px 0 10px;
+  font-size: 5rem;
+  font-family: Georgia, serif;
+}
+
+.swish-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 3rem;
+}
+
 .home-description {
   width: 100%;
   height: 20rem;
@@ -427,11 +453,6 @@ a.Progress{
   font-size: 2rem;
   padding: 2rem;
 }
-
-
-
-
-
 
 
 /* ============ COMPONENTS ============ */
