--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -124,9 +124,6 @@ section>h2 {
   text-align: center;
 }
 
-.history {
-  text-align: center;
-}
 
 .home {
   height: 100vh;
@@ -395,6 +392,44 @@ img {
 }
 
 
+/* ============ History page ============ */
+
+  .church-img {
+    background-image: url(./assets/history.jpg);
+    width: 80%;
+    height: 20rem;
+    background-size: cover;
+    margin-left: 9rem;
+  }
+
+  .history-description {
+    width: 100%;
+    height: 45rem;
+    background-color: white;
+    color: black;
+    text-align: center;
+  }
+
+  .history-title {
+    font-family: 'Prospectus', 'Georgia', serif !important;
+    font-size: 5rem;
+  }
+
+  .history {
+    text-align: center;
+    height: 100vh;
+    width: 100%;
+  }
+
+  .history-text1 {
+    text-align: left;
+    padding-left: 5rem;
+  }
+
+  .history-text2 {
+    text-align: left;
+    padding-left: 5rem;
+  }
 
 /* ============ Gift page ============ */
 
@@ -426,7 +461,7 @@ img {
 
 .home-description {
   width: 100%;
-  height: 20rem;
+  height: 40rem;
   background-color: white;
   color: black;
   text-align: center;
